# TreadmillLocomotionVR

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
config/: TreadmillLocomotionVR.ini
docs/: ARCHITECTURE_PROPOSAL.md  EXPERIMENT_PLAN.md  REALITYRUNNER_API_LOGGER.md  REALITYRUNNER_SNIFFER.md
mcm/: README.md
mcm/MCM/Config/TreadmillLocomotionVR/: config.json  settings.ini
mcm/Scripts/Source/: TESV_Papyrus_Flags  TreadmillLocomotionVR.psc  TreadmillLocomotionVR_MCM.psc
mcm/Scripts/Source/Stubs/: Debug.psc  Form.psc  Quest.psc  SKI_ConfigBase.psc
src/: GameIntegration.cpp  GameIntegration.h  InputMux.cpp  InputMux.h  IntentTelemetry.cpp  IntentTelemetry.h  LocomotionAnalysis.cpp  LocomotionAnalysis.h  LocomotionIntent.cpp  LocomotionIntent.h  PCH.h  PapyrusApi.cpp  PapyrusApi.h  RealityRunnerApiClient.cpp  RealityRunnerApiClient.h  Settings.cpp  Settings.h  Telemetry.cpp  Telemetry.h  Version.h  XInputLocomotionOutput.cpp  XInputLocomotionOutput.h  XInputTelemetryProbe.cpp  XInputTelemetryProbe.h  main.cpp
tests/: LocomotionAnalysisTests.cpp
tools/McmPluginBuilder/: McmPluginBuilder.csproj  Program.cs
tools/RealityRunnerApiLogger/: rr-api-logger.ps1  rr_api_logger.py
tools/RealityRunnerSniffer/: Program.cs  RealityRunnerSniffer.csproj
